# manipulator

./: CMakeLists.txt
application/: CMakeLists.txt  main.cpp
include/: Algorithm.h
source/: Algorithm.cpp  CMakeLists.txt
